mejora de estilos, y algunos arreglos
